Colaboratory を使用して作成しました

--- a/株価相関.ipynb
+++ b/株価相関.ipynb
@@ -29,14 +29,15 @@
       "metadata": {
         "id": "thanFoLIc8KS",
         "colab_type": "code",
-        "outputId": "0fa2328e-f35d-4f85-e2ab-7c3cc5424958",
+        "outputId": "bb7a9c6a-0e1b-4f5a-f6ae-177b07dba1dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 316
+          "height": 457
         }
       },
       "source": [
-        "#必要なライブラリimport\n",
+        "# 必要なライブラリimport\n",
+        "\n",
         "!pip install lxml html5lib beautifulsoup4\n",
         "\n",
         "import pandas as pd\n",
@@ -51,6 +52,7 @@
         "import itertools\n",
         "\n",
         "# Install yfinance package.\n",
+        "\n",
         "!pip install yfinance\n",
         " \n",
         "# Import yfinance\n",
@@ -64,20 +66,28 @@
             "Requirement already satisfied: lxml in /usr/local/lib/python3.6/dist-packages (4.2.6)\n",
             "Requirement already satisfied: html5lib in /usr/local/lib/python3.6/dist-packages (1.0.1)\n",
             "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.6/dist-packages (4.6.3)\n",
-            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.6/dist-packages (from html5lib) (1.12.0)\n",
             "Requirement already satisfied: webencodings in /usr/local/lib/python3.6/dist-packages (from html5lib) (0.5.1)\n",
-            "Requirement already satisfied: yfinance in /usr/local/lib/python3.6/dist-packages (0.1.50)\n",
+            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.6/dist-packages (from html5lib) (1.12.0)\n",
+            "Collecting yfinance\n",
+            "  Downloading https://files.pythonhosted.org/packages/85/56/5e26c150517acbdce8e31d3e6169530e102a0575f5eb1a4310753e53a424/yfinance-0.1.50.tar.gz\n",
+            "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.25.3)\n",
+            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.17.4)\n",
             "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.6/dist-packages (from yfinance) (2.21.0)\n",
             "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.0.9)\n",
-            "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.25.3)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.17.3)\n",
-            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2.8)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2019.9.11)\n",
-            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
-            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
             "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2.6.1)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.24->yfinance) (1.12.0)\n"
+            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2019.9.11)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
+            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2.8)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.24->yfinance) (1.12.0)\n",
+            "Building wheels for collected packages: yfinance\n",
+            "  Building wheel for yfinance (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for yfinance: filename=yfinance-0.1.50-py2.py3-none-any.whl size=21556 sha256=59e797cdb979490374dc7baad3e26ffc371fc26c8d20ba4433ca1b2c3ea4b65a\n",
+            "  Stored in directory: /root/.cache/pip/wheels/19/2a/e6/b4d4cc977576e18220a36866acf2f2cf7241f16af5f8795b17\n",
+            "Successfully built yfinance\n",
+            "Installing collected packages: yfinance\n",
+            "Successfully installed yfinance-0.1.50\n"
           ],
           "name": "stdout"
         }
@@ -88,14 +98,14 @@
       "metadata": {
         "id": "sqm_X-wFrDR_",
         "colab_type": "code",
-        "outputId": "f7d95828-4ca5-470a-bbfe-83917d10d2e5",
+        "outputId": "666cf5c1-587f-43b1-ce9d-f1b55beb1f49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "#S&P全銘柄のリストを作成\n",
+        "# S&P全銘柄のリストを作成\n",
         "url=\"https://en.wikipedia.org/wiki/List_of_S%26P_500_companies\"\n",
         "sp500_list=pd.read_html(url)[0].Symbol.values.tolist()\n",
         "len(sp500_list)"
@@ -124,8 +134,8 @@
         "colab": {}
       },
       "source": [
-        "#yahooでは銘柄シンボルの\".\"は\"-\"に変えないとエラーになるので置換\n",
-        "#\".\"を\"-\"に置換\n",
+        "# yahooでは銘柄シンボルの\".\"は\"-\"に変えないとエラーになるので置換\n",
+        "# \".\"を\"-\"に置換\n",
         "sp500_list_yahoo=[i.replace(\".\",\"-\")for i in sp500_list]"
       ],
       "execution_count": 0,
@@ -136,17 +146,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "5LG9O59jz1KV",
-        "outputId": "f1f4a477-2e9b-4eb4-eb79-1e8f393038c7",
+        "outputId": "147851e2-56ea-4b5f-a625-431fae97da6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "#sp500銘柄の終値を１つのDataFrameに格納\n",
+        "# sp500銘柄の終値を１つのDataFrameに格納\n",
         "close_sp500_list=yf.download(sp500_list_yahoo,'2019-10-04','2019-11-01')[\"Adj Close\"]\n"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +172,7 @@
       "metadata": {
         "id": "8hKtCRf5Xlfk",
         "colab_type": "code",
-        "outputId": "ff278325-d8c0-413f-c35e-b9d78ddaf856",
+        "outputId": "61bbbab2-cf8b-4611-e8b2-5128cc306830",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -171,7 +181,7 @@
       "source": [
         "len(list(itertools.combinations(sp500_list,2)))\n"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +193,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -195,12 +205,12 @@
         "colab": {}
       },
       "source": [
-        "#列ごとのペアで相関を算出\n",
+        "# 列ごとのペアで相関を算出\n",
         "\n",
-        "#算出した相関を入れるための辞書型作成\n",
+        "# 算出した相関を入れるための辞書型作成\n",
         "correlations={}\n",
         "\n",
-        "#相関を算出\n",
+        "# 相関を算出\n",
         "for cola,colb in itertools.combinations(sp500_list_yahoo,2):\n",
         "  nas=np.logical_or(np.isnan(close_sp500_list.loc[:,cola]),np.isnan(close_sp500_list.loc[:,colb]))\n",
         "  try:\n",
@@ -216,19 +226,19 @@
       "metadata": {
         "id": "v29NWQ9baMe2",
         "colab_type": "code",
+        "outputId": "8bf0635e-cacb-4c74-d0a1-7070387d0b5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 263
-        },
-        "outputId": "381402c6-1ad7-4e50-8442-53bc5dc57acf"
+        }
       },
       "source": [
-        "#出力された結果\"correlations\"はリスト形式なのでDataFrameに変換\n",
+        "# 出力された結果\"correlations\"はリスト形式なのでDataFrameに変換\n",
         "result=DataFrame.from_dict(correlations,orient='index')\n",
         "result.columns=['PCC','p-value']\n",
         "print(result.sort_values('PCC'))"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +270,8 @@
         "colab": {}
       },
       "source": [
-        "#上位１０ペアのグラフを表示\n"
+        "#上位１０ペアのグラフを表示\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
